// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownContainer should be rendered correctly 1`] = `
<div
  className="uui-dropdown-body -lock-focus root container"
  style={
    Object {
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  tabIndex={-1}
>
  <button
    className="container uui-button-box uui-enabled root uui-button uui-fill-solid uui-color-primary uui-size-36"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  />
</div>
`;

exports[`DropdownContainer should be rendered correctly 2`] = `
<div
  className="uui-dropdown-body -lock-focus root vPadding-18 padding-24 container"
  style={
    Object {
      "maxWidth": 300,
      "minHeight": 600,
      "minWidth": 300,
    }
  }
  tabIndex={-1}
>
  <button
    className="container uui-button-box uui-enabled root uui-button uui-fill-solid uui-color-primary uui-size-36"
    onClick={[Function]}
    tabIndex={-1}
    type="button"
  />
</div>
`;
